fix footer alignment

--- a/src/pages/home/components/Footer/style.css
+++ b/src/pages/home/components/Footer/style.css
@@ -23,11 +23,17 @@
     text-decoration: underline;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1100px) {
     #footer {
         margin: 30px 0 0 0;
+        border-radius: 0;
+    }
+}
+
+
+@media screen and (max-width: 650px) {
+    #footer {
         flex-direction: column;
         gap: 10px;
-        border-radius: 0;
     }
 }
